Test carbon design

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,13 @@
 	<title>Adam Chen</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/css/global.css'>
+	<link rel='stylesheet' href='/css/bootstrap.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
+	<script defer src='/js/jquery.slim.min.js'></script>
+	<script defer src='/js/bootstrap.min.js'></script>
 </head>
 
 <body>
