--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,11 @@
 	<title>Adam Chen</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/css/global.css'>
-	<link rel='stylesheet' href='/css/bootstrap.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/build/app.css'>
 
 	<script defer src='/build/bundle.js'></script>
 	<script defer src='/js/jquery.slim.min.js'></script>
-	<script defer src='/js/bootstrap.min.js'></script>
 </head>
 
 <body>
