--- a/Terrace/wwwroot/index.html
+++ b/Terrace/wwwroot/index.html
@@ -7,19 +7,42 @@
     <title>Terrace</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
     <link href="Terrace.styles.css" rel="stylesheet" />
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+<div id="app">
+    <div class="fullscreen load-screen">
+        <div class="centered" style="width: 30%">
+            <p id="app-load">
+                Loading Runtime...
+            </p>
+            <br />
+            <div class="progress-b">
+                <div class="indeterminate" id="l-bar" style="width: 100%"></div>
+            </div>
+        </div>
+    </div>
+    <div style="left: 20px; bottom: 20px; position: fixed" id="app-load-status">
+    </div>
+    <div style="right: 20px; bottom: 20px; position: fixed" id="app-load-tip">
+        Starting application
+    </div>
+</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="js/decode.js"></script>
+    <script src="js/preload.js"></script>
 </body>
 
 </html>
